// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trailing-comma.ts - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string,
      to: string,
    }, // <== this one
  ];
  shop: string;
  distance: number;
}

=====================================output=====================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string;
      to: string;
    }, // <== this one
  ];
  shop: string;
  distance: number;
}

================================================================================
`;

exports[`trailing-comma.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string,
      to: string,
    }, // <== this one
  ];
  shop: string;
  distance: number;
}

=====================================output=====================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string;
      to: string;
    } // <== this one
  ];
  shop: string;
  distance: number;
}

================================================================================
`;

exports[`trailing-comma.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string,
      to: string,
    }, // <== this one
  ];
  shop: string;
  distance: number;
}

=====================================output=====================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string;
      to: string;
    } // <== this one
  ];
  shop: string;
  distance: number;
}

================================================================================
`;

exports[`tuple.ts - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================

export type SCMRawResource = [
	number /*handle*/,
	string /*resourceUri*/,
	modes.Command /*command*/,
	string[] /*icons: light, dark*/,
	boolean /*strike through*/,
	boolean /*faded*/
];

=====================================output=====================================
export type SCMRawResource = [
  number /*handle*/,
  string /*resourceUri*/,
  modes.Command /*command*/,
  string[] /*icons: light, dark*/,
  boolean /*strike through*/,
  boolean /*faded*/,
];

================================================================================
`;

exports[`tuple.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================

export type SCMRawResource = [
	number /*handle*/,
	string /*resourceUri*/,
	modes.Command /*command*/,
	string[] /*icons: light, dark*/,
	boolean /*strike through*/,
	boolean /*faded*/
];

=====================================output=====================================
export type SCMRawResource = [
  number /*handle*/,
  string /*resourceUri*/,
  modes.Command /*command*/,
  string[] /*icons: light, dark*/,
  boolean /*strike through*/,
  boolean /*faded*/
];

================================================================================
`;

exports[`tuple.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

export type SCMRawResource = [
	number /*handle*/,
	string /*resourceUri*/,
	modes.Command /*command*/,
	string[] /*icons: light, dark*/,
	boolean /*strike through*/,
	boolean /*faded*/
];

=====================================output=====================================
export type SCMRawResource = [
  number /*handle*/,
  string /*resourceUri*/,
  modes.Command /*command*/,
  string[] /*icons: light, dark*/,
  boolean /*strike through*/,
  boolean /*faded*/
];

================================================================================
`;

exports[`tuple-rest-not-last.ts - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
// https://github.com/babel/babel/pull/11753

let x: [...[number, string], string]

type ValidateArgs = [
	{
		[key: string]: any;
	},
	string,
	string,
	...string[],
];

type ValidateArgs = [
	{
		[key: string]: any;
	},
	string,
	...string[],
	string,
];

=====================================output=====================================
// https://github.com/babel/babel/pull/11753

let x: [...[number, string], string];

type ValidateArgs = [
  {
    [key: string]: any;
  },
  string,
  string,
  ...string[],
];

type ValidateArgs = [
  {
    [key: string]: any;
  },
  string,
  ...string[],
  string,
];

================================================================================
`;

exports[`tuple-rest-not-last.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
// https://github.com/babel/babel/pull/11753

let x: [...[number, string], string]

type ValidateArgs = [
	{
		[key: string]: any;
	},
	string,
	string,
	...string[],
];

type ValidateArgs = [
	{
		[key: string]: any;
	},
	string,
	...string[],
	string,
];

=====================================output=====================================
// https://github.com/babel/babel/pull/11753

let x: [...[number, string], string];

type ValidateArgs = [
  {
    [key: string]: any;
  },
  string,
  string,
  ...string[]
];

type ValidateArgs = [
  {
    [key: string]: any;
  },
  string,
  ...string[],
  string
];

================================================================================
`;

exports[`tuple-rest-not-last.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// https://github.com/babel/babel/pull/11753

let x: [...[number, string], string]

type ValidateArgs = [
	{
		[key: string]: any;
	},
	string,
	string,
	...string[],
];

type ValidateArgs = [
	{
		[key: string]: any;
	},
	string,
	...string[],
	string,
];

=====================================output=====================================
// https://github.com/babel/babel/pull/11753

let x: [...[number, string], string];

type ValidateArgs = [
  {
    [key: string]: any;
  },
  string,
  string,
  ...string[]
];

type ValidateArgs = [
  {
    [key: string]: any;
  },
  string,
  ...string[],
  string
];

================================================================================
`;
